from sqlalchemy import (
    Column,
    Integer,
    String,
    DateTime,
    ForeignKey,
    Enum,
    Boolean
)
from sqlalchemy.orm import relationship
from datetime import datetime
from app.database import Base


class Event(Base):
    """
    SQLAlchemy model representing a system event generated by an action
    performed over a specific reference entity.
    """
    __tablename__ = "events"

    id = Column("Id", Integer, primary_key=True)
    event_type = Column("EventType", String(50), nullable=False)
    reference_table = Column("ReferenceTable", String(100))
    reference_id = Column("ReferenceId", Integer)
    created_at = Column("CreatedAt", DateTime, default=datetime.utcnow, nullable=False)
    created_by = Column("CreatedBy", Integer, ForeignKey("users.Id"))

    user_events = relationship(
        "UserEvent",
        back_populates="event"
    )


class UserEvent(Base):
    """
    SQLAlchemy model representing the association between a user and an event,
    including read state and notification linkage.
    """
    __tablename__ = "user_events"

    id = Column("Id", Integer, primary_key=True)
    event_id = Column("EventId", Integer, ForeignKey("events.Id"), nullable=False)
    user_id = Column("UserId", Integer, ForeignKey("users.Id"), nullable=False)
    is_read = Column("IsRead", Boolean, default=False, nullable=False)
    read_at = Column("ReadAt", DateTime)

    event = relationship(
        "Event",
        back_populates="user_events"
    )
    notifications = relationship(
        "Notification",
        back_populates="user_event"
    )


class Notification(Base):
    """
    SQLAlchemy model representing a notification generated for a user event
    and delivered through a specific channel.
    """
    __tablename__ = "notifications"

    id = Column("Id", Integer, primary_key=True)
    user_event_id = Column(
        "UserEventId",
        Integer,
        ForeignKey("user_events.Id"),
        nullable=False
    )
    channel = Column("Channel", Enum("email", "system", "push"), nullable=False)
    sent = Column("Sent", Boolean, default=False, nullable=False)
    sent_at = Column("SentAt", DateTime)

    user_event = relationship(
        "UserEvent",
        back_populates="notifications"
    )
